--- a/index.html
+++ b/index.html
@@ -62,25 +62,14 @@
 
 		<div class="row" style="margin-top: 30px">
 			<div>
-				<p>The Wishlist</p>
-				<div class="col-md-6 col-md-offset-2" style="height: 500px">
-				<!--div class="col-md-4">A cricket bat<img src="imgs/5.jpg" class="img-responsive tiles"></div-->
-				<div class="tile"><p class="tile-title">Cricket Bat</p><div class="icon-circle"><i class="fa fa-battery-0"></i></div><img src="imgs/5.jpg" class="img-responsive tiles"></div>
-				<div class="tile"><div class="icon-circle"><i class="fa fa-battery-2"></i></div><img src="imgs/5.jpg" class="img-responsive tiles"></div>
-				<div class="tile"><div class="icon-circle"><i class="fa fa-battery-4"></i></div><img src="imgs/5.jpg" class="img-responsive tiles"></div>
-				<div class="tile"><div class="icon-circle"><i class="fa fa-battery-4"></i></div><img src="imgs/5.jpg" class="img-responsive tiles"></div>
-				<div class="tile"><div class="icon-circle"><i class="fa fa-battery-0"></i></div><img src="imgs/5.jpg" class="img-responsive tiles"></div>
-				<div class="tile"><div class="icon-circle"><i class="fa fa-battery-2"></i></div><img src="imgs/5.jpg" class="img-responsive tiles"></div>
-				<div class="tile"><div class="icon-circle"><i class="fa fa-battery-0"></i></div><img src="imgs/5.jpg" class="img-responsive tiles"></div>
-				<div class="tile"><div class="icon-circle"><i class="fa fa-battery-0"></i></div><img src="imgs/5.jpg" class="img-responsive tiles"></div>
-
-				
-				</div>
+				<p style="font-size: 40px; font-weight: 900;">The Wishlist</p>
+				<div class="col-md-8 tile-group" ></div>
+				<div class="col-md-4" style="border : #333 solid 3px"></div>
 			</div>
 		</div>
 
 
-		<div style="background-color: #222">
+		<div style="background-color: #222;position: absolute;width: 100%; height: 200px">
 		<p style="color: #eee">Keerthana Gopalakrishnan</p>
 			
 		</div>
