new card design

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="cssmain.css">
-		<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,600,900,700,300' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="cssmain.css"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link href="https://fonts.googleapis.com/css?family=Aguafina+Script|Lato:100i,300,300i,400,700,700i,900,900i" rel="stylesheet">
 	</head>
 	<body>
 		<nav class="navbar navbar-fixed-top navbar-default" style="background-color:#eeeeee">
@@ -28,8 +27,8 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
 					<ul class="nav navbar-nav navbar-right rightnav">
-						<li><a id="nav-wishlist"href="#" style="margin-right: 50px"><i class="fa fa-user"></i> Wishlist</a></li>
-						<li><a id="nav-contact"href="#" style="margin-right: 100px"><i class="fa fa-briefcase"></i> Contact</a></li>
+						<li><a id="nav-wishlist"href="#" style="margin-right: 50px"><i class="fa fa-gift"></i> Wishlist</a></li>
+						<li><a id="nav-contact"href="#" style="margin-right: 100px"><i class="fa fa-phone"></i> Contact</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
@@ -59,20 +58,21 @@
 			</div>
 		</div>
 		</div>
+		<div class="jumbo parallax parallax-2"></div>
 
-		<div class="row" style="margin-top: 30px">
+		<div class="row" style="padding-top: 30px;background:#eee" >
 			<div>
-				<p style="font-size: 40px; font-weight: 900;">The Wishlist</p>
-				<div class="col-md-8 tile-group" ></div>
-				<div class="col-md-4" style="border : #333 solid 3px"></div>
+				<p style="font-size: 80px; font-weight: 900;">The Wishlist</p>
+				<div class="col-md-10 tile-group col-md-offset-1"></div>
+				<!--div class="col-md-4" style="border : #333 solid 3px"></div-->
 			</div>
 		</div>
 
 
-		<div style="background-color: #222;position: absolute;width: 100%; height: 200px">
+		<footer style="background-color: #222;position: absolute;width: 100%">
 		<p style="color: #eee">Keerthana Gopalakrishnan</p>
 			
-		</div>
+		</footer>
 		
 
 
