add form and hall of fame

--- a/index.html
+++ b/index.html
@@ -1,86 +1,82 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Pledge for Disha</title>
-		
-		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script type="text/javascript" src="jsmain.js"></script>
-		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="cssmain.css"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-		<link href="https://fonts.googleapis.com/css?family=Aguafina+Script|Lato:100i,300,300i,400,700,700i,900,900i" rel="stylesheet">
-	</head>
-	<body>
-		<nav class="navbar navbar-fixed-top navbar-default" style="background-color:#eeeeee">
-			<div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand brand" href="#" id="nav-home" style="margin-left: 50px">Home</a>
-				</div>
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
-					<ul class="nav navbar-nav navbar-right rightnav">
-						<li><a id="nav-wishlist"href="#" style="margin-right: 50px"><i class="fa fa-gift"></i> Wishlist</a></li>
-						<li><a id="nav-contact"href="#" style="margin-right: 100px"><i class="fa fa-phone"></i> Contact</a></li>
-					</ul>
-				</div><!-- /.navbar-collapse -->
-			</div><!-- /.container-fluid -->
-		</nav>
+<head>
+    <title>Pledge for Disha</title>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="jsmain.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="cssmain.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Aguafina+Script|Lato:100i,300,300i,400,700,700i,900,900i" rel="stylesheet">
+</head>
 
-		<div class="jumbo parallax parallax-1"><p>Be Their Genie<p></div>
-		<div class="row">
-		<div class="col-md-8 col-md-offset-2">
-			
-			<div>
-				<p class="head1">What is this?</p>
-				<p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
-			</div>
-			
-			<div>
+<body>
+    <nav class="navbar navbar-fixed-top navbar-default" style="background-color:#eeeeee">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand brand" href="#" id="nav-home" style="margin-left: 50px">Home</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right rightnav">
+                    <li><a id="nav-wishlist" href="#" style="margin-right: 50px"><i class="fa fa-gift"></i> Wishlist</a></li>
+                    <li><a id="nav-contact" href="#" style="margin-right: 100px"><i class="fa fa-phone"></i> Contact</a></li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <div class="jumbo parallax parallax-1">
+        <p>Be Their Genie
+            <p>
+    </div>
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div>
+                <p class="head1">What is this?</p>
+                <p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
+            </div>
+            <div>
+                <p class="head1">How can I help?</p>
+                <p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
+            </div>
+            <div>
+                <p class="head1">How do I know my money is best used here?</p>
+                <p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
+            </div>
+        </div>
+    </div>
+    <div class="jumbo parallax parallax-2"></div>
+    <div class="row" style="padding-top: 30px;background:#eee">
+        <div>
+            <p style="font-size: 80px; font-weight: 900;">The Wishlist</p>
+            <div class="col-md-10 tile-group col-md-offset-1"></div>
+            <!--div class="col-md-4" style="border : #333 solid 3px"></div-->
+        </div>
+    </div>
+    <div class="row" style="background-color:#333">
 
-				<p class="head1">How can I help?</p>
-				<p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
+            <p style="font-size: 80px; font-weight: 900;color:#eee">Wall of Fame - Our Genies</p>
+            <div class="genies col-md-6 col-md-offset-3">
+            	
+            </div>
+    </div>
+    <div>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_ED7DR7KGiPVw2r89hSB6IIbLnLzKl_MoUKgLmPmFTnzEsw/viewform?embedded=true" width="560" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+    </div>
+    <footer style="background-color: #222;position: absolute;width: 100%">
+        <p style="color: #eee;margin:30px">Keerthana Gopalakrishnan</p>
+    </footer>
+</body>
 
-			</div>
-
-			<div>
-
-				<p class="head1">How do I know my money is best used here?</p>
-				<p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
-
-			</div>
-		</div>
-		</div>
-		<div class="jumbo parallax parallax-2"></div>
-
-		<div class="row" style="padding-top: 30px;background:#eee" >
-			<div>
-				<p style="font-size: 80px; font-weight: 900;">The Wishlist</p>
-				<div class="col-md-10 tile-group col-md-offset-1"></div>
-				<!--div class="col-md-4" style="border : #333 solid 3px"></div-->
-			</div>
-		</div>
-
-
-		<footer style="background-color: #222;position: absolute;width: 100%">
-		<p style="color: #eee">Keerthana Gopalakrishnan</p>
-			
-		</footer>
-		
-
-
-	
-
-
-
-	</body>
 </html>
-
-
