--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.7&appId=1132621580160615";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <nav class="navbar navbar-fixed-top navbar-default" style="background-color:#eeeeee">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -64,6 +72,7 @@
             <!--div class="col-md-4" style="border : #333 solid 3px"></div-->
         </div>
     </div>
+    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
     <div class="row" style="background-color:#333">
 
             <p style="font-size: 80px; font-weight: 900;color:#eee">Wall of Fame - Our Genies</p>
