--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -76,10 +77,10 @@
     <div class="row" style="background-color:#333">
 
             <p style="font-size: 80px; font-weight: 900;color:#eee">Wall of Fame - Our Genies</p>
-            <div class="genies col-md-6 col-md-offset-3">
-            	
+            <div class="genies col-md-6 col-md-offset-3">             	
             </div>
     </div>
+    <div class="fb-page" data-href="https://www.facebook.com/dishaseemacentre/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/dishaseemacentre/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/dishaseemacentre/">Disha Seema School</a></blockquote></div>
     <div>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_ED7DR7KGiPVw2r89hSB6IIbLnLzKl_MoUKgLmPmFTnzEsw/viewform?embedded=true" width="560" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
