--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col-md-8 col-md-offset-2">
             <div>
                 <p class="head1">What is this?</p>
-                <p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
+                <p class="text1">This is a wishlist, by the students studying at Disha seema. Disha Seema is a residential school at IIT Kharagpur hosting 300+ students from underprivileged backgrounds in rural West Bengal, Jharkhand and Orissa. It was established in 1992 by Hansa Nundi, a 1964 alumnus of IIT kharagpur and the first woman to graduate from the Electrical Engineering Department. The school has a library, </p>
             </div>
             <div>
                 <p class="head1">How can I help?</p>
@@ -79,7 +79,7 @@
     <div>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_ED7DR7KGiPVw2r89hSB6IIbLnLzKl_MoUKgLmPmFTnzEsw/viewform?embedded=true" width="560" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
-    
+
     <div class="row" style="background-color:#333">
 
             <p style="font-size: 80px; font-weight: 900;color:#eee">Wall of Fame - Our Genies</p>
