--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right rightnav">
-                    <li><a id="nav-wishlist" href="#" style="margin-right: 50px"><i class="fa fa-gift"></i> Wishlist</a></li>
-                    <li><a id="nav-contact" href="#" style="margin-right: 100px"><i class="fa fa-phone"></i> Contact</a></li>
+                    <li><a id="nav-wishlist" href="#wishlist" style="margin-right: 50px"><i class="fa fa-gift"></i> Wishlist</a></li>
+                    <li><a id="nav-contact" href="#contact" style="margin-right: 100px"><i class="fa fa-phone"></i> Contact</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -59,13 +59,24 @@
             </div>
             <div>
                 <p class="head1">How can I help?</p>
-                <p class="text1">This is a wishlist containing the things that they cannot afford. You can help us fulfill some of them. Some items in the wishlist such cricket bats or mosquito nets can be bought online and sent to their address. We've added links to e-commerce websites offering the item at the cheapest price, wherever possible. PLease fill the form to let us know you've bought the item so we can take it off the list and attribute the contribution to you. However, some items like eggs or milk cannot be bought online, and some items such as large kadai are not available at best prices online. In such cases we suggest that you send us the money and contact us before doing so. </p>
+                <p class="text1">This is a wishlist containing the things that they cannot afford. You can help us fulfill some of them. Some items in the wishlist such cricket bats or mosquito nets can be bought online and sent to their address. We've added links to e-commerce websites offering the item at the cheapest price, wherever possible. Please fill the form to let us know you've bought the item so we can take it off the list and attribute the contribution to you. However, some items like eggs or milk cannot be bought online, and some items such as large kadai are not available at best prices online. In such cases we suggest that you send us the money and contact us before doing so. </p>
+                <div style="text-align:left">
+                <p class="text1" style="text-align:left"><b>tl;dr?</b></p>
+                <p class="text1"><ul>
+                	<li>Pick a wish or wishes you want to fulfill</li>
+                	<li>Buy them on amazon with the delivery address as the one mentioned below</li>
+                	<li>If you see no link under the item, you can transfer the amount to the bank account number mentioned below</li>
+                	<li>Fill the form, so that we check the item off the list</li>
+                	<li>If you want to give partial contribution to an expensive item, do contact us and transfer the money</li>
+                	<li>Finally, brace yourselves for an avalanche of cute pictures! </li>
+                </ul></p>
+            </div>
             </div>
             <div>
                 <p class="head1">How do I know my money is best used here?</p>
                 <p class="text1">We will send you cute pictures of the kids making use of your donations. :) </p>
             </div>
-            <div>
+            <div  id="contact">
                 <p class="head1">Details</p>
                 <p class="text1">
                     <div style="text-align:left">
@@ -93,21 +104,23 @@
                             </p>
                         </div>
                     </div>
+            	</div>
             </div>
-        </div>
     </div>
     <div class="jumbo parallax parallax-2"></div>
-    <div class="row" style="padding-top: 30px;background:#eee">
+    <div class="row" style="padding-top: 30px;background:#eee" id="wishlist">
         <div>
             <p style="font-size: 80px; font-weight: 900;">The Wishlist</p>
             <div class="col-md-10 tile-group col-md-offset-1"></div>
             <!--div class="col-md-4" style="border : #333 solid 3px"></div-->
         </div>
     </div>
-    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
-    <div>
+    <div style="text-align:center; margin-top:30px; margin-bottom:30px" class="fb-like" data-href="https://nuwandavek.github.io/be-their-genie" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+    <div id="formy">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_ED7DR7KGiPVw2r89hSB6IIbLnLzKl_MoUKgLmPmFTnzEsw/viewform?embedded=true" width="560" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
+    <div style="text-align:center; margin-top:30px; margin-bottom:30px" class="fb-like" data-href="https://nuwandavek.github.io/be-their-genie" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+    
     <div class="row" style="background-color:#333">
         <p style="font-size: 80px; font-weight: 900;color:#eee">Our Genies</p>
         <div class="genies col-md-6 col-md-offset-3">
