migrate to new repo

--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
             <!--div class="col-md-4" style="border : #333 solid 3px"></div-->
         </div>
     </div>
-    <div style="text-align:center; margin-top:30px; margin-bottom:30px" class="fb-like" data-href="https://nuwandavek.github.io/be-their-genie" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+    <div style="text-align:center; margin-top:30px; margin-bottom:30px" class="fb-like" data-href="https://dishaseemaschool.github.io/be-their-genie" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
     <div id="formy">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_ED7DR7KGiPVw2r89hSB6IIbLnLzKl_MoUKgLmPmFTnzEsw/viewform?embedded=true" width="560" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
-    <div style="text-align:center; margin-top:30px; margin-bottom:30px" class="fb-like" data-href="https://nuwandavek.github.io/be-their-genie" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+    <div style="text-align:center; margin-top:30px; margin-bottom:30px" class="fb-like" data-href="https://dishaseemaschool.github.io/be-their-genie" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
     
     <div class="row" style="background-color:#333">
         <p style="font-size: 80px; font-weight: 900;color:#eee">Our Genies</p>
