--- a/index.html
+++ b/index.html
@@ -53,15 +53,42 @@
         <div class="col-md-8 col-md-offset-2">
             <div>
                 <p class="head1">What is this?</p>
-                <p class="text1">This is a wishlist, by the students studying at Disha seema. Disha Seema is a residential school at IIT Kharagpur hosting 300+ students from underprivileged backgrounds in rural West Bengal, Jharkhand and Orissa. It was established in 1992 by Hansa Nundi, a 1964 alumnus of IIT kharagpur and the first woman to graduate from the Electrical Engineering Department. The school has a library, </p>
+                <p class="text1">This is a wishlist, by the students studying at Disha seema. Disha Seema is a residential school at IIT Kharagpur hosting 300+ students from underprivileged backgrounds in rural West Bengal, Jharkhand and Orissa. It was established in 1992 by Hansa Nundi, a 1964 alumnus of IIT Kharagpur and the first woman to graduate from the Electrical Engineering Department. The school has a library, an aquaguard, a television, a park made of tires among other facilities. The school is supported by donations from alumni and well-wishers but with the burgeoning number of students, they are always short of money, to the extent that most kids have never had milk or eggs. </p>
             </div>
             <div>
                 <p class="head1">How can I help?</p>
-                <p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
+                <p class="text1">This is a wishlist, by the students, about the things that they cannot afford. You can help us fulfill some of them. Some items in the wishlist such cricket bats or mosquito nets can be bought online and sent to their address. We've added links to e-commerce websites offering the item at the cheapest price, wherever possible. PLease fill the form to let us know you've bought the item so we can take it off the list and attribute the contribution to you. However, some items like eggs or milk cannot be bought online, and some items such as large kadai are not available at best prices online. In such cases we suggest that you send us the money and contact us before doing so. </p>
             </div>
             <div>
                 <p class="head1">How do I know my money is best used here?</p>
-                <p class="text1">This is a wishlist, by the students studying at Disha seema.Lorem ipsum dolor sit amet, legimus invenire eos at, usu petentium democritum voluptatibus cu, docendi erroribus vim te. Et invidunt mandamus mea. Tritani suscipit assentior no ius, qui cu wisi falli conceptam. Cu labitur epicurei persequeris pro. An illud soleat eruditi his, placerat recusabo duo no. Nullam prompta contentiones sed at, omnes dissentiet id est.Ex est possim nominavi. At quis inermis est. In nominati delicata eos, at usu lucilius intellegebat consequuntur. Est eu dolore aperiri dignissim, duis latine tamquam usu ut. Ne hinc aperiam eam. Animal dolores reprehendunt no vis, ex has suas porro. Ea vim timeam euismod incorrupte, voluptua atomorum qualisque te has.</p>
+                <p class="text1">-------------- We wil send you cute pictures of the kids using your donations. </p>
+            </div>
+            <div>
+                <p class="head1">Details</p>
+                <p class="text1">
+
+                FCRA Account Number(For donations from outside India): 344412922131
+                Account Number(For donations from within India):34735977818
+                Account Holder's Name: Jyoti Development Trust (The parent organisation of the school)
+
+                Contact:
+
+                Hansa Nundy, Founder of Disha Seema School
+                Phone: 9933191066
+
+                Keerthana P G, student at IIT Kharagpur
+                Email: keerthanpg@gmail.com
+                Phone: 9002285251/9091402205
+
+                Address: 
+
+                Disha Seema School
+                Behind Rural Development Centre,
+                IIT Kharagpur,
+                West Midinipur,
+                West Bengal-721301
+
+                 </p>
             </div>
         </div>
     </div>
@@ -88,7 +115,7 @@
     </div>
     
     <footer style="background-color: #222;position: absolute;width: 100%">
-        <p style="color: #eee;margin:30px">Keerthana Gopalakrishnan</p>
+        <p style="color: #eee;margin:30px">Keerthana Gopalakrishnan, Vivek Aithal</p>
     </footer>
 </body>
 
