--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <br> Disha Seema School
                                 <br> Behind Rural Development Centre,
                                 <br> IIT Kharagpur,
-                                <br> West Midinipur,
+                                <br> West Medinipur,
                                 <br> West Bengal-721301
                                 <br>
                             </p>
