--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+<meta property="og:url"                content="https://dishaseemaschool.github.io/be-their-genie/" />
+<meta property="og:type"               content="website" />
+<meta property="og:title"              content="Be Their Genie" />
+<meta property="og:description"        content="This is a wishlist by the students at Disha Seema School. Will you be their genie?" />
+<meta property="og:image"              content="https://dl.dropboxusercontent.com/s/l4gyvjfbfp9omqm/dss.png" />
 
 <head>
     <title>Pledge for Disha</title>
