Milk cost added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 	<li>If you see no link under the item, you can transfer the amount to the bank account number mentioned below</li>
                 	<li>Fill the form, so that we check the item off the list</li>
                 	<li>If you want to give partial contribution to an expensive item, do contact us and transfer the money</li>
+                    <li> For any other enquiries regarding size/specifications, please contact us via email</li>
                 	<li>Finally, brace yourselves for an avalanche of cute pictures! </li>
                 </ul></p>
             </div>
