--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                     <div style="text-align:left">
                         <p>FCRA Account Number(For donations from outside India): 344412922131
                             <br> Account Number(For donations from within India):34735977818
-                            <br> Account Holder's Name: Jyoti Development Trust (The parent organisation of the school)</p>
+                            <br> Account Holder's Name: Jyoti Development Trust (The parent organisation of the school)
+                            <br> IFSC Code : SYNB0009556 </p>
                         <div class="col-md-5 col-md-offset-1" style="margin-top:20px;margin-bottom:20px;">
                             <p><b>Contact:</b>
                                 <br> Hansa Nundy, Founder of Disha Seema School
