--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html>
-<meta property="og:url"                content="https://dishaseemaschool.github.io/be-their-genie/" />
-<meta property="og:type"               content="website" />
-<meta property="og:title"              content="Be Their Genie" />
-<meta property="og:description"        content="This is a wishlist by the students at Disha Seema School. Will you be their genie?" />
-<meta property="og:image"              content="https://dl.dropboxusercontent.com/s/l4gyvjfbfp9omqm/dss.png" />
 
 <head>
     <title>Pledge for Disha</title>
@@ -88,7 +83,8 @@
                     <div style="text-align:left">
                         <p>FCRA Account Number(For donations from outside India): 344412922131
                             <br> Account Number(For donations from within India):34735977818
-                            <br> Account Holder's Name: Jyoti Development Trust (The parent organisation of the school)</p>
+                            <br> Account Holder's Name: Jyoti Development Trust (The parent organisation of the school)
+                            <br> IFSC Code : SYNB0009556 </p>
                         <div class="col-md-5 col-md-offset-1" style="margin-top:20px;margin-bottom:20px;">
                             <p><b>Contact:</b>
                                 <br> Hansa Nundy, Founder of Disha Seema School
@@ -104,7 +100,7 @@
                                 <br> Disha Seema School
                                 <br> Behind Rural Development Centre,
                                 <br> IIT Kharagpur,
-                                <br> West Midinipur,
+                                <br> West Medinipur,
                                 <br> West Bengal-721301
                                 <br>
                             </p>
