--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@
                 <p class="text1" style="text-align:left"><b>tl;dr?</b></p>
                 <p class="text1"><ul>
                 	<li>Pick a wish or wishes you want to fulfill</li>
-                	<li>Buy them on amazon with the delivery address as the one mentioned below</li>
+                	<li>Buy them on amazon for Disha Seema School with the delivery address as the one mentioned below</li>
+                	<li>Use the phone number of Mr Manoj Mahato(9800556919) as contact so the delivery person knows who to call when he/she arrives</li>
                 	<li>If you see no link under the item, you can transfer the amount to the bank account number mentioned below</li>
                 	<li>Fill the form, so that we check the item off the list</li>
                 	<li>If you want to give partial contribution to an expensive item, do contact us and transfer the money</li>
-                    <li> For any other enquiries regarding size/specifications, please contact us via email</li>
+                    <li>For any other enquiries regarding size/specifications, please contact us via email</li>
                 	<li>Finally, brace yourselves for an avalanche of cute pictures! </li>
                 </ul></p>
             </div>
@@ -89,7 +90,8 @@
                             <p><b>Contact:</b>
                                 <br> Hansa Nundy, Founder of Disha Seema School
                                 <br> Phone: 9933191066
-                                <br>
+                                <br> Manoj Mahato, Manager at Disha Seema School
+                                <br> Phone: 9800556919
                             </p>
                             <p>Keerthana P G, student at IIT Kharagpur
                                 <br> Email: keerthanpg@gmail.com
